--- a/doxygen.css
+++ b/doxygen.css
@@ -1,4 +1,4 @@
-/* The standard CSS for doxygen 1.11.0*/
+/* The standard CSS for doxygen 1.13.2*/
 
 body {
     background-color: white;
@@ -338,8 +338,7 @@ pre.fragment {
         opacity: 0;
         position: absolute;
         display: inline;
-        overflow: auto;
-        fill: black;
+        overflow: hidden;
         justify-content: center;
         align-items: center;
         cursor: pointer;
@@ -351,7 +350,7 @@ pre.fragment {
 }
 
 .fragment:hover .clipboard, .clipboard.success {
-        opacity: .28;
+        opacity: .4;
 }
 
 .clipboard:hover, .clipboard.success {
@@ -1057,7 +1056,7 @@ table.fieldtable {
         padding: 3px 7px 2px;
 }
 
-.fieldtable td.fieldtype, .fieldtable td.fieldname {
+.fieldtable td.fieldtype, .fieldtable td.fieldname, .fieldtable td.fieldinit {
         white-space: nowrap;
         border-right: 1px solid #A8B8D9;
         border-bottom: 1px solid #A8B8D9;
@@ -1067,6 +1066,12 @@ table.fieldtable {
 .fieldtable td.fieldname {
         padding-top: 3px;
 }
+
+.fieldtable td.fieldinit {
+        padding-top: 3px;
+        text-align: right;
+}
+
 
 .fieldtable td.fielddoc {
         border-bottom: 1px solid #A8B8D9;
@@ -1416,6 +1421,11 @@ dl.invariant dt, dl.pre dt, dl.post dt {
 	padding: 2px 0px;
 }
 
+#side-nav #projectname
+{
+	font-size: 130%;
+}
+
 #projectbrief
 {
 	font-size: 90%;
@@ -1522,20 +1532,17 @@ div.toc ul {
         padding: 0px;
 }
 
+div.toc li[class^='level'] {
+        margin-left: 15px;
+}
+
 div.toc li.level1 {
         margin-left: 0px;
 }
 
-div.toc li.level2 {
-        margin-left: 15px;
-}
-
-div.toc li.level3 {
-        margin-left: 15px;
-}
-
-div.toc li.level4 {
-        margin-left: 15px;
+div.toc li.empty {
+        background-image: none;
+        margin-top: 0px;
 }
 
 span.emoji {
@@ -1806,9 +1813,13 @@ th.markdownTableHeadCenter, td.markdownTableBodyCenter {
 	text-align: center
 }
 
-tt, code, kbd, samp
+tt, code, kbd
 {
   display: inline-block;
+}
+tt, code, kbd
+{
+  vertical-align: top;
 }
 /* @end */
 
